--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,5 +86,6 @@ dependencies {
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 
     implementation 'com.orhanobut:logger:2.2.0'
+    implementation 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
 
 }
