--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ allprojects {
         mavenCentral()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/releases/' }
+        maven { url "https://jitpack.io" }
     }
 }
 
